# includeSpellChecker

./: README  cabal.sandbox.config  checker.hs  includeSpellChecker.cabal  rakefile.rb  test.h
old/: checker_old.hs
src/: Main.hs
src/Analyzer/: Checker.hs
tests/: Properties.hs
