Name:                includeSpellChecker

Version:             0.2

Synopsis:            clean up wrongly spelled include paths in c/c++ files

-- A longer description of the package.
-- Description:

License:             BSD3

License-file:        LICENSE

Author:              Oliver Mueller

Maintainer:          oliver.mueller@gmail.com

Category:            Development

Build-type:          Simple

Cabal-version:       >=1.2


Executable includeSpellChecker
  hs-source-dirs:     src
  Main-is:            Main.hs

  Build-Depends:      base>=4,
                      bytestring,
                      HUnit,
                      QuickCheck,
                      text,
                      split,
                      regex-compat,
                      containers,
                      filepath,
                      filemanip


test-suite tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests,src
  main-is:        Properties.hs

  ghc-options: -Wall -threaded -rtsopts

  build-depends:
                      bytestring,
                      HUnit,
                      QuickCheck,
                      text,
                      split,
                      regex-compat,
                      containers,
                      filepath,
                      filemanip
